color grouping revisions

--- a/views/event.mustache
+++ b/views/event.mustache
@@ -1,4 +1,4 @@
-<div class="event">
+<div class="event group{{revision_group}}">
   <span class="repo"><a href="{{repo_url}}">{{repository}}</a></span>
   <span class="date">{{date_short}}</span>
   <span class="type">{{type}} {{tag}}{{branch}}</span>
