--- a/static/main.css
+++ b/static/main.css
@@ -9,6 +9,7 @@ h1 {
     padding: 5px;
     background-color: #CCCCCC;
     width: 130px;
+    border-radius: 10px;
 }
 
 #current .event > span {
@@ -49,3 +50,24 @@ br {
 #history .repo {
     display: none;
 }
+
+.group1 {
+    border-left: 10px solid #00AA00;
+}
+
+.group2 {
+    border-left: 10px solid #FFAA00;
+}
+
+.group3 {
+    border-left: 10px solid #FF0000;
+}
+
+.group4 {
+    border-left: 10px solid #AAAAFF;
+}
+
+.group5 {
+    border-left: 10px solid #FFAAAA;
+}
+
