first implement of diff buttons

--- a/views/event.mustache
+++ b/views/event.mustache
@@ -3,5 +3,8 @@
   <span class="date">{{date_short}}</span>
   <span class="type">{{type}} {{tag}}{{branch}}</span>
   <span class="remote"><a href="{{repo_url}}/remote/{{remote}}">{{remote}}</a></span>
-  <span class="revision"><a href="{{repo_url}}/rev/{{revision}}">{{revision_short}}</a></span>
+  <span class="revision">
+    <input type="checkbox" data-repo-url="{{repo_url}}" value="{{revision}}"/>
+    <a href="{{repo_url}}/rev/{{revision}}">{{revision_short}}</a>
+  </span>
 </div>
