--- a/views/template.html
+++ b/views/template.html
@@ -1,5 +1,7 @@
 <html>
 <link href="/main.css" type="text/css" rel="stylesheet">
+<script src="/jquery-1.8.3.min.js" type="text/javascript"></script>
+<script src="/main.js" type="text/javascript"></script>
 <body>
 <h1>Deployment Status Checker</h1>
 {{{content}}}
