--- a/static/main.css
+++ b/static/main.css
@@ -6,6 +6,14 @@ input[disabled] {
     visibility: hidden;
 }
 
+.rev1 {
+    color: #00AA00;
+}
+
+.rev2 {
+    color: #FFAA00;
+}
+
 #current .event {
     float: left;
     margin: 5px;
