--- a/views/diff.html
+++ b/views/diff.html
@@ -1,9 +1,9 @@
 <h2>Log</h2>
-<pre>
+<pre class="log" data-rev1="{{rev1}}" data-rev2="{{rev2}}">
 {{log}}
 </pre>
 
 <h2>Diff</h2>
-<pre>
+<pre class="diff">
 {{diff}}
 </pre>
