--- a/views/diff.html
+++ b/views/diff.html
@@ -1,9 +1,10 @@
-<h2>Log</h2>
+<h2><a href="../../">Repository {{repository}}</a></h2>
+<h3>Diff <span class="rev1">{{rev1}}</span> <span class="rev2">{{rev2}}</span></h3>
+
 <pre class="log" data-rev1="{{rev1}}" data-rev2="{{rev2}}">
 {{log}}
 </pre>
 
-<h2>Diff</h2>
 <pre class="diff">
 {{diff}}
 </pre>
