--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,5 @@
 {{#repos}}
-  <div id="current" class="events">
+  <div class="current events">
   {{#events_latest}}
     {{> event}}
   {{/events_latest}}
