--- a/views/remote.html
+++ b/views/remote.html
@@ -1,4 +1,5 @@
-<h2>Repository {{repository}}</h2>
+<h2><a href="../">Repository {{repository}}</a></h2>
+<h3>Remote {{remote}}</h3>
 
 <div class="current events">
   {{#events_latest}}
