--- a/views/template.html
+++ b/views/template.html
@@ -1,9 +1,10 @@
 <html>
+<!-- <link href="/reset.css" type="text/css" rel="stylesheet"> -->
 <link href="/main.css" type="text/css" rel="stylesheet">
 <script src="/jquery-1.8.3.min.js" type="text/javascript"></script>
 <script src="/main.js" type="text/javascript"></script>
 <body>
-<h1>Deployment Status Checker</h1>
+<h1><a href="/">Deployment Status Checker</a></h1>
 {{{content}}}
 </body>
 </html>
