--- a/views/remote.html
+++ b/views/remote.html
@@ -1,6 +1,8 @@
 <h2><a href="../">Repository {{repository}}</a></h2>
 <h3>Remote {{remote}}</h3>
 
+{{> updated}}
+
 <div class="current events">
   {{#events_latest}}
     {{> event}}
