fix template var names

--- a/views/rev.html
+++ b/views/rev.html
@@ -1,4 +1,4 @@
-<h2><a href="../">Repository {{repository}}</a></h2>
+<h2><a href="../">Repository {{repo}}</a></h2>
 <h3>Revision {{revision}}</h2>
 
 <div class="history events">
