--- a/views/template.html
+++ b/views/template.html
@@ -1,7 +1,7 @@
 <html>
 <base href="{{base_url}}">
 <link href="main.css" type="text/css" rel="stylesheet">
-<script src="jquery-1.8.3.min.js" type="text/javascript"></script>
+<script src="bower_components/jquery/jquery.min.js" type="text/javascript"></script>
 <script src="main.js" type="text/javascript"></script>
 <body>
 <h1><a href="">Deployment Status Checker</a></h1>
